--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,9 @@
     "dev": "nodemon index.js"
   },
   "keywords": [],
+  "engines":{
+    "node": "v22.14.0"
+  },
   "author": "",
   "license": "ISC",
   "type": "module",
